# bindiff-rs

./: .gitignore  .goreleaser.yaml  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: rust.yml
examples/: bindiff.rs  binexport.rs
src/: binexport.rs  binexport2.proto  lib.rs  main.rs
