[package]
name = "bindiff-rs"
version = "0.1.7"
edition = "2021"
authors = ["blacktop <blacktop@noreply.github.com>"]
description = "Rust bindings to BinDiff"
repository = "https://github.com/blacktop/bindiff-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
build = "build.rs"

[dependencies]
anyhow = "1.0.95"
prost = "0.13.4"
chrono = "0.4.39"
rusqlite = { version = "0.32.1", features = ["bundled", "chrono"] }
calm_io = "0.1.1"
scopeguard = "1.2.0"

[build-dependencies]
prost-build = "0.13.4"
